# QMLApplicationTemplate

./: .gitignore  CMakeLists.txt
cmake/: Functions.cmake  doxygen.cmake
src/: CMakeLists.txt  main.cpp  meta.hpp.in
src/Application/: CMakeLists.txt  appController.cpp  appController.hpp  appInstance.cpp  appInstance.hpp
src/res/: CMakeLists.txt  Project.rc.in  res.qrc.in
